@@ -100,6 +100,8 @@ wxMSW:
 
 - wxOwnerDrawnComboBox and wxComboCtrl with wxCB_READONLY window style now
   have more native-like focus indicator rendering.
+- Fixed wxOwnerDrawnComboBox keyboard handling: drop-down is no longer
+  displayed when arrow key is pressed (without Alt).
 
 2.8.11:
 -------
